--- a/src/SerializationProviders/SerializationProviders.nuspec
+++ b/src/SerializationProviders/SerializationProviders.nuspec
@@ -12,5 +12,14 @@
         <description>$description$</description>
         <copyright>Copyright 2014</copyright>
         <tags>SerializationProviders serialization serialize serializer serialization-providers serialization-provider</tags>
+        <dependencies>
+            <package id="Newtonsoft.Json" version="4.5.1" targetFramework="net40" />
+            <package id="protobuf-net" version="2.0.0.621" targetFramework="net40" />
+            <package id="ProviderModel" version="1.0.1" targetFramework="net40" />
+        </dependencies>
+        <frameworkAssemblies>
+            <frameworkAssembly assemblyName="System.Configuration" targetFramework="net40" />
+            <frameworkAssembly assemblyName="System.Xml" targetFramework="net40" />
+        </frameworkAssemblies>
     </metadata>
 </package>
