--- a/src/SerializationProviders/SerializationProviders.csproj
+++ b/src/SerializationProviders/SerializationProviders.csproj
@@ -39,9 +39,8 @@
     <Reference Include="protobuf-net">
       <HintPath>..\..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
-    <Reference Include="ProviderModel, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\ProviderModel.1.0.1\lib\net40\ProviderModel.dll</HintPath>
+    <Reference Include="ProviderModel">
+      <HintPath>..\..\packages\ProviderModel.1.0.2\lib\net40\ProviderModel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -60,7 +59,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="SerializationProviders.nuspec" />
+    <None Include="SerializationProviders.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENSE.txt" />
